# otsdaq_utilities

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: build-single-pkg.yml  test-single-pkg.yml  track_new_issues.yml  track_new_prs.yml
WebGUI/: FTBFWebPath  NimPlusWebPath
WebGUI/JSONFiles/: tree-data.json
WebGUI/css/: 2dViewer.css  3dViewer.css  CodeEditor.css  ConfigurationAPI.css  ConfigurationGUI.css  ConfigurationGUI_artdaq.css  Desktop.css  DqmGUI.css  EditSecurity.css  FEStructure.css  HistogramViewer.css  MacroMaker.css  MultiSelectBox.css  MultiSelectBoxForMacroMaker.css  RootViewer.css  SecuritySettings.css  SlowControlsDashboard.css  SmartLaunch.css  SystemStatus.css  UserSettings.css  Viewer2d.css  Viewer3d.css  ViewerRoot.css  editSecurity.css  fonts.css  ots.css
WebGUI/css/DqmPagesCss/: DaqRoomHealth.css  DqmHome.css  Plot.css
WebGUI/ext-6.2.0/: .gitignore  include-ext.js
WebGUI/fonts/: README
WebGUI/fonts/css/: fonts.css
WebGUI/html/: Calibrations.html  Chat.html  CodeEditor.html  CodeEditor_standalone.html  ConfigurationGUI.html  ConfigurationGUI_artdaq.html  ConfigurationGUI_subset.html  ConfigurationSubsetBlockDiagram.html  ConfigurationTableEditor.html  Console.html  DeleteWiz_ConfigurationGUI.html  Desktop.html  DqmGUI.html  EditSecurity.html  EditUserData.html  FECSupervisor.html  FEMacroTest.html  FEMacroTest_v2.html  FEStructure.html  FEWSupervisor.html  FecDirectory.html  GrafanaPlot.html  IconEditor.html  Iterate.html  Logbook.html  MacroMaker.html  MacroMakerSupervisor.html  MultiSelectBoxTest.html  OtsConfigurationWizard.html  Physics.html  PhysicsLore.html  RecordWiz_ConfigurationGUI.html  SecuritySettings.html  SimpleContextMenuTest.html  SlowControlsDashboard.html  SlowControlsDashboardEdit.html  SlowControlsDashboardFileTree.html  SmartLaunch.html  StateMachine.html  StateMachineTransitionStepper.html  (+14 more)
WebGUI/html/DqmPages/: DaqRoomHealth.html  DqmHome.html  Plot.html
WebGUI/html/widgets/: 2d_stop-light.html  WidgetLibrary.js  gauge_widget.html  guage_widget.html  label.html  led.html  navtabs.html  picture.html  plotly_bar_chart.html  plotly_xy_chart.html  tabs.html  (+12 more)
WebGUI/js/: CodeEditor.js  Debug.js  Debug.js.in  DeleteWiz_ConfigurationGUI.js  Desktop.js  DesktopContent.js  DesktopDashboard.js  DesktopIcons.js  DesktopLogin.js  DesktopWindow.js  DesktopWindowContentCode.js  DesktopWizardWindowContentCode.js  EditSecurity.js  Globals.js  HistogramViewer.js  IconEditor.js  MacroMaker.js  Macromaker.js  OtsConfigurationWizard.js  RecordWiz_ConfigurationGUI.js  STDLINE.js  SecuritySettings.js  SmartLaunch.js  SystemStatus.js  canvasModel.js  complexLayout.js  complexLayoutPersistency.js  editSecurity.js  iconEditor.js  makeFolders.cxx  makePlots.cxx  makePlotsCollection.cxx  navigator.js  navigatorLayouts.js  navigatorTools.js  themeSelector.js  widgetLibrary.js
doc/: CMakeLists.txt  doxygen_include_html.dox  inject_otsdaq.html  inject_otsdaq_head.html
onlineDoc/: doxygen_index.html  doxygen_main_editor.cpp  inject_otsdaq.html  inject_otsdaq_components.html  inject_otsdaq_demo.html  inject_otsdaq_fermilabtestbeam.html  inject_otsdaq_head.html  otsdaq_doc_library.js
onlineDoc/contentData/: otsdaq_features.json  otsdaq_images.json
otsdaq-utilities/: CMakeLists.txt  checkinAll.sh
otsdaq-utilities/Chat/: CMakeLists.txt  ChatSupervisor.cc  ChatSupervisor.h  version.cc  version.h
otsdaq-utilities/ConfigurationGUI/: CMakeLists.txt  ConfigurationGUISupervisor.cc  ConfigurationGUISupervisor.h  Iterate.h  version.cc  version.h
otsdaq-utilities/Console/: CMakeLists.txt  ConsoleSupervisor.cc  ConsoleSupervisor.h  MF_ReceiveAndForward.cpp  version.cc  version.h
otsdaq-utilities/ControlsDashboard/: CMakeLists.txt  ControlsDashboardSupervisor.cc  ControlsDashboardSupervisor.h  TCPClient.cc  TCPClient.h  TCPClientBase.cc  TCPClientBase.h
otsdaq-utilities/ECLWriter/: CMakeLists.txt  ECL.cxx  ECL.hxx  ECL.xsd  ECLConnection.cpp  ECLConnection.h  ECLSupervisor.cc  ECLSupervisor.h  ECLTest.cc  NovaECLWriter.cpp  NovaECLWriter.h  xsdcxx.cmd
otsdaq-utilities/Logbook/: CMakeLists.txt  LogbookSupervisor.cc  LogbookSupervisor.h  version.cc  version.h
otsdaq-utilities/MacroMaker/: CMakeLists.txt  MacroMakerSupervisor.cc  MacroMakerSupervisor.h  version.cc  version.h
otsdaq-utilities/OtsConfigurationWizard/: CMakeLists.txt  OtsConfigurationWizard.cc  OtsConfigurationWizard.h  OtsConfigurationWizardSupervisor.cc  OtsConfigurationWizardSupervisor.h
otsdaq-utilities/SlowControlsDashboard/: CMakeLists.txt  EpicsInterface.cc  EpicsInterface.h  EpicsInterface.h.bkup  SlowControlsDashboardSupervisor.cc  SlowControlsDashboardSupervisor.h  SlowControlsInterface.h  SlowControlsInterfaceBase.h.bkup  SlowControlsVInterface.h  version.cc  version.h
otsdaq-utilities/SlowControlsInterfaceCore/: CMakeLists.txt  SlowControlsVInterface.cc  SlowControlsVInterface.h
otsdaq-utilities/SlowControlsInterfacePlugins/: CMakeLists.txt  EpicsInterface_monitor.cc  SlowControlsOtsInterface.h  SlowControlsOtsInterface_monitor.cc
otsdaq-utilities/UtilitiesPluginMakers/: CMakeLists.txt  MakeMonitor.cc  MakeMonitor.h
otsdaq-utilities/Visualization/: CMakeLists.txt  VisualDataManager.cc  VisualDataManager.h  VisualSupervisor.cc  VisualSupervisor.h  version.cc  version.h
otsdaq-utilities/VisualizationV2/: CMakeLists.txt  VisualDataManagerV2.cc  VisualDataManagerV2.h  VisualSupervisorV2.cc  VisualSupervisorV2.h  version.cc  version.h
tools/: AddNewFirmware.py  AddNewFrontEndInterface.py  AddNewHardware.py  AddNewInterface.py  CMakeLists.txt  CopyInterface.py  EclipseBuild.sh  EclipseIncludes.xml  EclipseReadme.txt  OnlineDocPushUpdate.sh  ProductsUpdate.py  README  UpdateOTS.sh  buildFW  build_otsdaq.sh  change_ots_qualifiers.sh  create_ots_repo.sh  displayVersionsAndQualifiers.sh  get-ext.sh  mega_update.py  ots_add_qualifiers_to_repo_product_deps.sh  ots_change_name_for_new_repo.sh  ots_create_repo_from_demo.sh  ots_get_and_fix_repo.sh  quick_ots_install.sh  standalone_code_editor_install.sh
ups/: product_deps
(+47 files in other folders)
