# Extra parts for the XDAQ GUI


#add_subdirectory(SlowControlsInterfacePlugins)


add_subdirectory(Chat)
add_subdirectory(ConfigurationGUI)
add_subdirectory(Logbook)
add_subdirectory(OtsConfigurationWizard)
add_subdirectory(Visualization)
add_subdirectory(MacroMaker)
add_subdirectory(Console)
add_subdirectory(ControlsDashboard)
